--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@ Slides CPS/~$l3b.pptx
 Slides CPS/~$l3a.pptx
 Slides CPS/~$l3d.pptx
 Slides CPS/~$l4a.pptx
+Spin/Book/msc.ps
+Spin/Book/pan.b
+Spin/Book/pan.t
+Spin/Book/pan.p
+Spin/Book/pan.m
+Spin/Book/pan.h
+Spin/Book/pan.exe
+Spin/Book/pan.c
